--- a/ws/build.gradle
+++ b/ws/build.gradle
@@ -94,6 +94,8 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-websocket', version: springVersion
     implementation('net.unicon.cas:cas-client-autoconfig-support:2.1.0-GA')
     implementation('org.json:json:20190722')
+    implementation group: 'org.apache.poi', name: 'poi', version: '3.15'
+    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '3.15'
     implementation group: 'org.yaml', name: 'snakeyaml', version: '1.26'
     // https://mvnrepository.com/artifact/org.springframework.security/spring-security-core
     //compile group: 'org.springframework.security', name: 'spring-security-core', version: '5.2.1.RELEASE'
